wren.h


typedef struct WrenVM WrenVM;
typedef struct WrenHandle WrenHandle;
typedef void* (*WrenReallocateFn)(void* memory, size_t newSize, void* userData);
typedef const char* (*WrenResolveModuleFn)(WrenVM* vm,
    const char* importer, const char* name);
typedef WrenLoadModuleResult (*WrenLoadModuleFn)(WrenVM* vm, const char* name);
typedef WrenForeignMethodFn (*WrenBindForeignMethodFn)(WrenVM* vm,
    const char* module, const char* className, bool isStatic,
    const char* signature);
typedef void (*WrenWriteFn)(WrenVM* vm, const char* text);
typedef void (*WrenErrorFn)(
    WrenVM* vm, WrenErrorType type, const char* module, int line,
    const char* message);
typedef WrenForeignClassMethods (*WrenBindForeignClassFn)(
    WrenVM* vm, const char* module, const char* className);
typedef struct
{
  WrenReallocateFn reallocateFn;
  WrenResolveModuleFn resolveModuleFn;
  WrenLoadModuleFn loadModuleFn;
  WrenBindForeignMethodFn bindForeignMethodFn;
  WrenBindForeignClassFn bindForeignClassFn;
  WrenWriteFn writeFn;
  WrenErrorFn errorFn;
  size_t initialHeapSize;
  size_t minHeapSize;
  int heapGrowthPercent;
  void* userData;
} WrenConfiguration;
typedef enum
{
  WREN_RESULT_SUCCESS,
  WREN_RESULT_COMPILE_ERROR,
  WREN_RESULT_RUNTIME_ERROR
} WrenInterpretResult;
typedef enum
{
  WREN_TYPE_BOOL,
  WREN_TYPE_NUM,
  WREN_TYPE_FOREIGN,
  WREN_TYPE_LIST,
  WREN_TYPE_MAP,
  WREN_TYPE_NULL,
  WREN_TYPE_STRING,
  WREN_TYPE_UNKNOWN
} WrenType;
WREN_API int wrenGetVersionNumber();
WREN_API void wrenInitConfiguration(WrenConfiguration* configuration);
WREN_API WrenVM* wrenNewVM(WrenConfiguration* configuration);
WREN_API void wrenFreeVM(WrenVM* vm);
WREN_API void wrenCollectGarbage(WrenVM* vm);
WREN_API WrenInterpretResult wrenInterpret(WrenVM* vm, const char* module,
                                  const char* source);
WREN_API WrenHandle* wrenMakeCallHandle(WrenVM* vm, const char* signature);
WREN_API WrenInterpretResult wrenCall(WrenVM* vm, WrenHandle* method);
WREN_API void wrenReleaseHandle(WrenVM* vm, WrenHandle* handle);
WREN_API int wrenGetSlotCount(WrenVM* vm);
WREN_API void wrenEnsureSlots(WrenVM* vm, int numSlots);
WREN_API WrenType wrenGetSlotType(WrenVM* vm, int slot);
WREN_API bool wrenGetSlotBool(WrenVM* vm, int slot);
WREN_API const char* wrenGetSlotBytes(WrenVM* vm, int slot, int* length);
WREN_API double wrenGetSlotDouble(WrenVM* vm, int slot);
WREN_API void* wrenGetSlotForeign(WrenVM* vm, int slot);
WREN_API const char* wrenGetSlotString(WrenVM* vm, int slot);
WREN_API WrenHandle* wrenGetSlotHandle(WrenVM* vm, int slot);
WREN_API void wrenSetSlotBool(WrenVM* vm, int slot, bool value);
WREN_API void wrenSetSlotBytes(WrenVM* vm, int slot, const char* bytes, size_t length);
WREN_API void wrenSetSlotDouble(WrenVM* vm, int slot, double value);
WREN_API void* wrenSetSlotNewForeign(WrenVM* vm, int slot, int classSlot, size_t size);
WREN_API void wrenSetSlotNewList(WrenVM* vm, int slot);
WREN_API void wrenSetSlotNewMap(WrenVM* vm, int slot);
WREN_API void wrenSetSlotNull(WrenVM* vm, int slot);