lib/src/generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings to Wren, the scripting language and its vm
class WrenBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  WrenBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  WrenBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int wrenGetVersionNumber() {
    return _wrenGetVersionNumber();
  }

  late final _wrenGetVersionNumberPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('wrenGetVersionNumber');
  late final _wrenGetVersionNumber =
      _wrenGetVersionNumberPtr.asFunction<int Function()>();

  void wrenInitConfiguration(
    ffi.Pointer<WrenConfiguration> configuration,
  ) {
    return _wrenInitConfiguration(
      configuration,
    );
  }

  late final _wrenInitConfigurationPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<WrenConfiguration>)>>(
      'wrenInitConfiguration');
  late final _wrenInitConfiguration = _wrenInitConfigurationPtr
      .asFunction<void Function(ffi.Pointer<WrenConfiguration>)>();

  ffi.Pointer<WrenVM> wrenNewVM(
    ffi.Pointer<WrenConfiguration> configuration,
  ) {
    return _wrenNewVM(
      configuration,
    );
  }

  late final _wrenNewVMPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<WrenVM> Function(
              ffi.Pointer<WrenConfiguration>)>>('wrenNewVM');
  late final _wrenNewVM = _wrenNewVMPtr.asFunction<
      ffi.Pointer<WrenVM> Function(ffi.Pointer<WrenConfiguration>)>();

  void wrenFreeVM(
    ffi.Pointer<WrenVM> vm,
  ) {
    return _wrenFreeVM(
      vm,
    );
  }

  late final _wrenFreeVMPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<WrenVM>)>>(
          'wrenFreeVM');
  late final _wrenFreeVM =
      _wrenFreeVMPtr.asFunction<void Function(ffi.Pointer<WrenVM>)>();

  void wrenCollectGarbage(
    ffi.Pointer<WrenVM> vm,
  ) {
    return _wrenCollectGarbage(
      vm,
    );
  }

  late final _wrenCollectGarbagePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<WrenVM>)>>(
          'wrenCollectGarbage');
  late final _wrenCollectGarbage =
      _wrenCollectGarbagePtr.asFunction<void Function(ffi.Pointer<WrenVM>)>();

  int wrenInterpret(
    ffi.Pointer<WrenVM> vm,
    ffi.Pointer<ffi.Char> module,
    ffi.Pointer<ffi.Char> source,
  ) {
    return _wrenInterpret(
      vm,
      module,
      source,
    );
  }

  late final _wrenInterpretPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<WrenVM>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('wrenInterpret');
  late final _wrenInterpret = _wrenInterpretPtr.asFunction<
      int Function(
          ffi.Pointer<WrenVM>, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<WrenHandle> wrenMakeCallHandle(
    ffi.Pointer<WrenVM> vm,
    ffi.Pointer<ffi.Char> signature,
  ) {
    return _wrenMakeCallHandle(
      vm,
      signature,
    );
  }

  late final _wrenMakeCallHandlePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<WrenHandle> Function(ffi.Pointer<WrenVM>,
              ffi.Pointer<ffi.Char>)>>('wrenMakeCallHandle');
  late final _wrenMakeCallHandle = _wrenMakeCallHandlePtr.asFunction<
      ffi.Pointer<WrenHandle> Function(
          ffi.Pointer<WrenVM>, ffi.Pointer<ffi.Char>)>();

  int wrenCall(
    ffi.Pointer<WrenVM> vm,
    ffi.Pointer<WrenHandle> method,
  ) {
    return _wrenCall(
      vm,
      method,
    );
  }

  late final _wrenCallPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<WrenVM>, ffi.Pointer<WrenHandle>)>>('wrenCall');
  late final _wrenCall = _wrenCallPtr
      .asFunction<int Function(ffi.Pointer<WrenVM>, ffi.Pointer<WrenHandle>)>();

  void wrenReleaseHandle(
    ffi.Pointer<WrenVM> vm,
    ffi.Pointer<WrenHandle> handle,
  ) {
    return _wrenReleaseHandle(
      vm,
      handle,
    );
  }

  late final _wrenReleaseHandlePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WrenVM>,
              ffi.Pointer<WrenHandle>)>>('wrenReleaseHandle');
  late final _wrenReleaseHandle = _wrenReleaseHandlePtr.asFunction<
      void Function(ffi.Pointer<WrenVM>, ffi.Pointer<WrenHandle>)>();

  int wrenGetSlotCount(
    ffi.Pointer<WrenVM> vm,
  ) {
    return _wrenGetSlotCount(
      vm,
    );
  }

  late final _wrenGetSlotCountPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<WrenVM>)>>(
          'wrenGetSlotCount');
  late final _wrenGetSlotCount =
      _wrenGetSlotCountPtr.asFunction<int Function(ffi.Pointer<WrenVM>)>();

  void wrenEnsureSlots(
    ffi.Pointer<WrenVM> vm,
    int numSlots,
  ) {
    return _wrenEnsureSlots(
      vm,
      numSlots,
    );
  }

  late final _wrenEnsureSlotsPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<WrenVM>, ffi.Int)>>(
      'wrenEnsureSlots');
  late final _wrenEnsureSlots =
      _wrenEnsureSlotsPtr.asFunction<void Function(ffi.Pointer<WrenVM>, int)>();

  int wrenGetSlotType(
    ffi.Pointer<WrenVM> vm,
    int slot,
  ) {
    return _wrenGetSlotType(
      vm,
      slot,
    );
  }

  late final _wrenGetSlotTypePtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<WrenVM>, ffi.Int)>>(
      'wrenGetSlotType');
  late final _wrenGetSlotType =
      _wrenGetSlotTypePtr.asFunction<int Function(ffi.Pointer<WrenVM>, int)>();

  bool wrenGetSlotBool(
    ffi.Pointer<WrenVM> vm,
    int slot,
  ) {
    return _wrenGetSlotBool(
      vm,
      slot,
    );
  }

  late final _wrenGetSlotBoolPtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<WrenVM>, ffi.Int)>>(
      'wrenGetSlotBool');
  late final _wrenGetSlotBool =
      _wrenGetSlotBoolPtr.asFunction<bool Function(ffi.Pointer<WrenVM>, int)>();

  ffi.Pointer<ffi.Char> wrenGetSlotBytes(
    ffi.Pointer<WrenVM> vm,
    int slot,
    ffi.Pointer<ffi.Int> length,
  ) {
    return _wrenGetSlotBytes(
      vm,
      slot,
      length,
    );
  }

  late final _wrenGetSlotBytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<WrenVM>, ffi.Int,
              ffi.Pointer<ffi.Int>)>>('wrenGetSlotBytes');
  late final _wrenGetSlotBytes = _wrenGetSlotBytesPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<WrenVM>, int, ffi.Pointer<ffi.Int>)>();

  double wrenGetSlotDouble(
    ffi.Pointer<WrenVM> vm,
    int slot,
  ) {
    return _wrenGetSlotDouble(
      vm,
      slot,
    );
  }

  late final _wrenGetSlotDoublePtr = _lookup<
          ffi
          .NativeFunction<ffi.Double Function(ffi.Pointer<WrenVM>, ffi.Int)>>(
      'wrenGetSlotDouble');
  late final _wrenGetSlotDouble = _wrenGetSlotDoublePtr
      .asFunction<double Function(ffi.Pointer<WrenVM>, int)>();

  ffi.Pointer<ffi.Void> wrenGetSlotForeign(
    ffi.Pointer<WrenVM> vm,
    int slot,
  ) {
    return _wrenGetSlotForeign(
      vm,
      slot,
    );
  }

  late final _wrenGetSlotForeignPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<WrenVM>, ffi.Int)>>('wrenGetSlotForeign');
  late final _wrenGetSlotForeign = _wrenGetSlotForeignPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<WrenVM>, int)>();

  ffi.Pointer<ffi.Char> wrenGetSlotString(
    ffi.Pointer<WrenVM> vm,
    int slot,
  ) {
    return _wrenGetSlotString(
      vm,
      slot,
    );
  }

  late final _wrenGetSlotStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<WrenVM>, ffi.Int)>>('wrenGetSlotString');
  late final _wrenGetSlotString = _wrenGetSlotStringPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<WrenVM>, int)>();

  ffi.Pointer<WrenHandle> wrenGetSlotHandle(
    ffi.Pointer<WrenVM> vm,
    int slot,
  ) {
    return _wrenGetSlotHandle(
      vm,
      slot,
    );
  }

  late final _wrenGetSlotHandlePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<WrenHandle> Function(
              ffi.Pointer<WrenVM>, ffi.Int)>>('wrenGetSlotHandle');
  late final _wrenGetSlotHandle = _wrenGetSlotHandlePtr
      .asFunction<ffi.Pointer<WrenHandle> Function(ffi.Pointer<WrenVM>, int)>();

  void wrenSetSlotBool(
    ffi.Pointer<WrenVM> vm,
    int slot,
    bool value,
  ) {
    return _wrenSetSlotBool(
      vm,
      slot,
      value,
    );
  }

  late final _wrenSetSlotBoolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<WrenVM>, ffi.Int, ffi.Bool)>>('wrenSetSlotBool');
  late final _wrenSetSlotBool = _wrenSetSlotBoolPtr
      .asFunction<void Function(ffi.Pointer<WrenVM>, int, bool)>();

  void wrenSetSlotBytes(
    ffi.Pointer<WrenVM> vm,
    int slot,
    ffi.Pointer<ffi.Char> bytes,
    int length,
  ) {
    return _wrenSetSlotBytes(
      vm,
      slot,
      bytes,
      length,
    );
  }

  late final _wrenSetSlotBytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WrenVM>, ffi.Int, ffi.Pointer<ffi.Char>,
              ffi.Size)>>('wrenSetSlotBytes');
  late final _wrenSetSlotBytes = _wrenSetSlotBytesPtr.asFunction<
      void Function(ffi.Pointer<WrenVM>, int, ffi.Pointer<ffi.Char>, int)>();

  void wrenSetSlotDouble(
    ffi.Pointer<WrenVM> vm,
    int slot,
    double value,
  ) {
    return _wrenSetSlotDouble(
      vm,
      slot,
      value,
    );
  }

  late final _wrenSetSlotDoublePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<WrenVM>, ffi.Int, ffi.Double)>>('wrenSetSlotDouble');
  late final _wrenSetSlotDouble = _wrenSetSlotDoublePtr
      .asFunction<void Function(ffi.Pointer<WrenVM>, int, double)>();

  ffi.Pointer<ffi.Void> wrenSetSlotNewForeign(
    ffi.Pointer<WrenVM> vm,
    int slot,
    int classSlot,
    int size,
  ) {
    return _wrenSetSlotNewForeign(
      vm,
      slot,
      classSlot,
      size,
    );
  }

  late final _wrenSetSlotNewForeignPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<WrenVM>, ffi.Int, ffi.Int,
              ffi.Size)>>('wrenSetSlotNewForeign');
  late final _wrenSetSlotNewForeign = _wrenSetSlotNewForeignPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(ffi.Pointer<WrenVM>, int, int, int)>();

  void wrenSetSlotNewList(
    ffi.Pointer<WrenVM> vm,
    int slot,
  ) {
    return _wrenSetSlotNewList(
      vm,
      slot,
    );
  }

  late final _wrenSetSlotNewListPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<WrenVM>, ffi.Int)>>(
      'wrenSetSlotNewList');
  late final _wrenSetSlotNewList = _wrenSetSlotNewListPtr
      .asFunction<void Function(ffi.Pointer<WrenVM>, int)>();

  void wrenSetSlotNewMap(
    ffi.Pointer<WrenVM> vm,
    int slot,
  ) {
    return _wrenSetSlotNewMap(
      vm,
      slot,
    );
  }

  late final _wrenSetSlotNewMapPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<WrenVM>, ffi.Int)>>(
      'wrenSetSlotNewMap');
  late final _wrenSetSlotNewMap = _wrenSetSlotNewMapPtr
      .asFunction<void Function(ffi.Pointer<WrenVM>, int)>();

  void wrenSetSlotNull(
    ffi.Pointer<WrenVM> vm,
    int slot,
  ) {
    return _wrenSetSlotNull(
      vm,
      slot,
    );
  }

  late final _wrenSetSlotNullPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<WrenVM>, ffi.Int)>>(
      'wrenSetSlotNull');
  late final _wrenSetSlotNull =
      _wrenSetSlotNullPtr.asFunction<void Function(ffi.Pointer<WrenVM>, int)>();
